# simple-text-signer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: binaries.yml
src/: args.rs  main.rs  test.rs
